add security notation to swagger
아직 실제로 세션 쿠키가 필요하진 않음. 스웨거만.
